--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,56 @@
-/* styles.css */
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #B22222;
+    color: #FFFFFF;
+    font-family: Arial, sans-serif;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #141414;
+    padding: 10px 20px;
+}
+
+
+.logo {
+    width: 100px;
+}
+
+.search {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.search input {
+    padding: 5px;
+    border: none;
+    border-radius: 3px;
+    margin-bottom: 10px;
+}
+
+.search button{
+    padding: 10px;
+    align-self: center;
+    border-radius: 10px;
+    
+}
+
+button {
+    background-color: #B22222;
+    color: #FFFFFF;
+    border: 1px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #A32222;
+}
+
 .card {
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -10,6 +62,26 @@
     overflow: hidden;
     cursor: pointer;
     transition: transform 0.3s ease;
+}
+
+.card-placeholder { 
+    border: 1px solid #ddd; 
+    border-radius: 8px; 
+    padding: 10px; 
+    margin: 10px; 
+    width: calc(20% - 40px); 
+    box-sizing: border-box; 
+    position: relative; 
+    overflow: hidden; 
+    cursor: pointer; 
+    transition: transform 0.3s ease; 
+    background-color: #333; 
+    color: #fff; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    text-align: center; 
+    height: 300px; 
 }
 
 .card img {
@@ -46,7 +118,7 @@
 
 .card-wrapper {
     display: flex;
-    overflow-x: hidden; 
+    overflow-x: hidden;
     max-width: 100%;
     position: relative;
 }
@@ -58,6 +130,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    color: #FFFFFF;
 }
 
 .arrow-left {
@@ -67,4 +140,3 @@
 .arrow-right {
     right: 10px;
 }
-
