--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     padding: 0;
@@ -118,6 +119,7 @@ button:hover {
 
 .card-wrapper {
     display: flex;
+    flex-wrap: wrap;
     overflow-x: hidden;
     max-width: 100%;
     position: relative;
